--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.10.4",
+    "bcrypt": "^5.1.1",
     "express": "^4.17.1",
     "graphql": "^16.8.1",
     "jsonwebtoken": "^8.5.1",
